style.css
/* ... */
   */
  .dropdown {
    display: inline-block;
  }
  
  .dropdown-content {
    display: none;
    position: absolute;
    background-color: black;
    min-width: 160px;
    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
    z-index: 1;
    /* margin-top: 6px; */
  }
  
  .dropdown-content a {
    color: white;
    padding: 12px 16px;
    text-decoration: none;
    display: block;
    text-align: left;
  }
  
  .dropdown-content a:hover {background-color: rgb(41, 39, 39);}
  
  .dropdown:hover .dropdown-content {
    display: block;
  }
  /* navbar css ends */

  a{
    text-decoration:none;
    color:#16163F;
  }
  .learn-more{
    color:white;
    padding:15px 25px 15px 25px;
    background:#FF5823;
    border:1px solid white;
    font-size:20px;
    border-radius:30px;
  }
  .services{
    padding:100px 50px;
    text-align:center;
  }
  .services-box{
    max-width:1150px;
    display:flex;
    margin:auto;
    justify-content:space-between;
    flex-wrap: wrap;
  }
  .service-card, .about-us-cards {
    width: 225px;
    padding: 10px;
  }
  .service-card {
    height: 225px;
    background-color: #cbc7c7;
  }
  .about-us-cards {
    height: 200px;
    background-color: black;
    opacity: 0.8;
    color: white;
  }
  .about-us-cards:hover {
    background-color: #FF5823;
    opacity: 1;
  }
  .service-btn {
    height: 35px;
    margin-top: 15px;
    border-radius: 20px;
    color: white;
    font-weight: 800;
    border: 1px solid #FF5823;
    background-color: #FF5823;
    cursor: pointer;
  }
  .flip-btn {
    color: black;
    position: absolute;
    right: 5px;
    top: 5px;
    height: 35px;
    font-weight: 800;
    background-color: #cbc7c7;
    cursor: pointer;
  }
  .service-info{
    margin:20px 0px 20px 0px;
  }
  .service-cont{
    display:flex;
    margin:10px 30px;
    flex-direction:column;
    align-items:center;
    white-space: nowrap;
  }
  .service-desc{
    width:100%;
    line-height:2em;
    text-align:center;
    color:#16163F;
    font-size:18px;
  }
  .contact{
    position:relative;
    background: #ffae15;
  }
  .igiuzk>a{
    margin-right:10px;
  }
  .copyright-footer{
    padding:25px;
    border:1px solid rgb(231,231,235);
    text-align:center;
  }
  #iy2lbi{
    font-size:15px;
    color:#16163F;
  }
  .i78bq-2-3{
    margin:0px 0px 30px 0px;
    align-self: center;
  }
  #iqrh3-2-2{
    color:#16163f;
    font-size:36px;
    font-weight:700;
  }
  .iyohgi{
    margin:0 0px 0px 0px;
    padding: 50px;
  }

  span{
    font-size: 18px;
  }

  /* collapsible FAQs css start */
  /* Style the button that is used to open and close the collapsible content */
  .collapsible {
    background-color: #eee;
    color: #16163f;
    cursor: pointer;
    padding: 18px;
    width: 100%;
    border: none;
    text-align: left;
    outline: none;
    font-size: 15px;
    margin-bottom: 20px;
  }

  /* Add a background color to the button if it is clicked on (add the .active class with JS), and when you move the mouse over it (hover) */
  .active, .collapsible:hover {
    background-color: #ccc;
    color: #16163f;
  }

  .active {
    margin-bottom: 0px;
    color: #ffffff;
  }

  /* Style the collapsible content. Note: hidden by default */
  .content {
    padding: 18px 18px;
    display: none;
    overflow: hidden;
    background-color: #f1f1f1;
    margin-bottom: 20px;
    color: #16163f;
  }
  /* collapsible css ends */

  .header-font-size{
    font-size: 16px;
    color: white;
    font-weight: 700;
  }

  .flex-div{
    display: flex;
    justify-content: center;
    align-items: center;
    gap: 5px;
  }

  .row-div{
    flex-direction: row;
  }

  .col-div{
    flex-direction: column;
  }

  .card {
    /* Add shadows to create the "card" effect */
    box-shadow: 0 8px 8px 0 rgba(0,0,0,0.2);
    transition: 0.3s;
    border-radius: 15px;
  }
  
  /* On mouse-over, add a deeper shadow */
  .card:hover {
    box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
  }

  .process-cards{
    min-width: 200px;
    max-width: 530px;
    /* height: 50px; */
    padding: 10px;
    text-align: center;
    /* background-color: #ffae15; */
    background-color: #FF5823;
    color: white;
  }

  #customer-form{
    padding: 20px;
    background: whitesmoke;
    font-size: 14px;
    color: black;
    border-radius: 10px;
    height: 480px;
    width: 30%;
    border: 2px solid black;
  }

  input[type="date"]{
    position: relative;
  }
  input[type="date"]::-webkit-calendar-picker-indicator {
    background: transparent;
    bottom: 0;
    color: transparent;
    cursor: pointer;
    height: auto;
    left: 0;
    position: absolute;
    right: 0;
    top: 0;
    width: auto;
  }

  #submit-btn{
    width: -webkit-fill-available;
    height: 35px;
    margin-top: 15px;
    border-radius: 4px;
    color: black;
    font-weight: 800;
    border: 1px solid black;
    background-color: #ffc452;
    cursor: pointer;
  }

  #submit-btn:disabled{
    border: #f1cc84;
    background-color: #f1cc84;
    cursor: not-allowed;
  }

  .contact-details{
    color: #16163F;
  }

  /* .border-bottom-class{
    border-bottom: solid #000000;
  } */

  .service-desc>li{
    text-align: left;
    font-size: 12px;
  }

  ul{
    padding: 0px;
  }

  #our-team-content{
    display: flex;
    justify-content: space-around;
    flex-direction: row;
    align-items: center;
    margin: auto;
    max-width: 1150px;
  }

  #our-services-content{
    display: flex;
    justify-content: space-around;
    flex-direction: row;
    align-items: center;
    margin: auto;
    max-width: 1150px;
  }

  .inquire-tos-content{
    display: flex;
    justify-content: space-around;
    flex-direction: row;
    margin: auto;
    max-width: 1150px;
  }

  #take-our-service-content {
    text-align: left;
    margin-top: 50px;
    width: 50%;
  }

  #table-parent {
    background: white;
    overflow-x:auto;
    border-radius: 5px;
    margin: 30px;
    margin: auto;
    max-width: 1150px;
  }
/* ... */

